--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,8 @@
     "tests"
   ],
   "dependencies": {
-  },
-  "devDependencies": {
     "bootstrap": "~3.3.1",
-    "react": "~0.12.1"
+    "react": "~0.12.1",
+    "react-router": "~0.11.4"
   }
 }
