--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "bower": "~1.3.12",
-    "gulp": "~3.8.10"
+    "gulp": "~3.8.10",
+    "gulp-react": "~2.0.0",
+    "coffee-script": "~1.8.0",
+    "main-bower-files": "~2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
