--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "gulp": "~3.8.10",
     "gulp-react": "~2.0.0",
     "coffee-script": "~1.8.0",
-    "main-bower-files": "~2.4.1"
+    "main-bower-files": "~2.4.1",
+    "del": "~1.1.0",
+    "gulp-util": "~3.0.1",
+    "lr-http-server": "~0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
