--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-cjsx": "^2.0.0",
     "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.4.3",
+    "gulp-order": "^1.1.1",
     "gulp-util": "~3.0.1",
     "lr-http-server": "~0.1.1",
     "main-bower-files": "~2.4.1"
