--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bower": "~1.3.12",
     "coffee-script": "~1.8.0",
     "del": "~1.1.0",
+    "event-stream": "^3.2.1",
     "gulp": "~3.8.10",
     "gulp-cjsx": "^2.0.0",
     "gulp-coffee": "^2.2.0",
