--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-cjsx": "^2.0.0",
     "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.4.3",
+    "gulp-less": "^3.0.5",
     "gulp-order": "^1.1.1",
     "gulp-util": "~3.0.1",
     "lr-http-server": "~0.1.1",
